examples/models-as-a-service-3scale/model-serving/3scale-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: 3scale
  namespace: llm-hosting
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: 3scale
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lls-demo
        - podSelector: {}
  policyTypes:
    - Ingress
